# captureflow-py

./: .gitignore  Dockerfile.cf  README.md
.github/workflows/: ci.yml
assets/: creating-github-app.md
captureflow_tests/captureflow_tests/: test_score_transaction.py
captureflow_tests/serverside/tests/: test_generate_bugfix_mr.py  test_score_transaction.py
clientside/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
clientside/examples/: fastapi-example.py
clientside/examples/fastapi/: README  install_package.sh  requirements.txt  server.py  utilz.py
clientside/examples/fastapi/traces/: sample_trace.json
clientside/src/: ot_tracer.py  test.py
clientside/src/captureflow/: tracer.py
clientside/tests/: test_fastapi_tracer.py
clientside_v2/: README.md  docker-compose.yml  pyproject.toml
clientside_v2/captureflow/: config.py  distro.py  instrumentation.py  resource.py  span_processor.py  tracer_provider.py
clientside_v2/examples/: server.py  sqlalchemy_init.py  test.db
clientside_v2/tests/: conftest.py  test_span_processor.py
clientside_v2/tests/instrumentation/: conftest.py  test_fastapi_instrumentation.py  test_flask_instrumentation.py  test_httpx_instrumentation.py  test_redis_instrumentation.py  test_requests_instrumentation.py  test_sqlalchemy_instrumentation.py
examples/: README.md  scenario.py
examples/fastapi-carshop-erp-example/fastapi-bigger-application-master/: requirements-local.txt  requirements.txt
examples/fastapi-carshop-erp-example/fastapi-bigger-application-master/app/src/routers/: auth.py
serverside/: Dockerfile  README.md  _build_index_mock_data.json  docker-compose.yml  enrich_node_with_github_data_mock_data.json  requirements-dev.txt  requirements.txt
serverside/src/: config.py  server.py
serverside/src/utils/: call_graph.py  docker_executor.py  exception_patcher.py  function_analyzer.py  orchestration.py  test_creator.py
serverside/src/utils/integrations/: github_integration.py  openai_integration.py  redis_integration.py
serverside/src/utils/resources/: pytest_template.py
serverside/tests/: conftest.py  test_bugfix.py  test_server.py
serverside/tests/assets/: sample_trace.json  sample_trace_with_exception.json
serverside/tests/integration/: basic_flow.py
serverside/tests/utils/: test_call_graph.py  test_creator.py  test_exception_patcher.py  test_orchestration.py
